devops_container_bootcamp/practice_app/k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-lab
  labels:
    name: devops-lab
