devops_container_bootcamp/practice_app/k8s/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: devops-lab
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 8080
      name: http
